--- a/src/MVCBlog.Website/Views/Rovian/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Rovian/Index.cshtml
@@ -43,12 +43,7 @@
                 <div class="col-xs-12 col-md-7">
                     <div class="le-paragraph">
                         <p>
-                            <strong>Lorem ipsum dolor sit amet,</strong>
-                            consectetur adipiscing elit. Nullam convallis lobortis commodo. Nulla et lobortis velit. Maecenas aliquam nulla eros, vitae rhoncus erat fermentum ac. Proin iaculis vel nulla et finibus. Suspendisse sed dolor libero. Nunc pellentesque in ipsum sit amet tempus.
-                        </p>
-                        <p>
-
-                            Nullam convallis lobortis commodo. Nulla et <strong>lobortis velit</strong>. Maecenas aliquam nulla eros, vitae rhoncus erat fermentum ac. Proin iaculis vel nulla et finibus. Suspendisse sed dolor libero. Nunc pellentesque in ipsum sit amet tempus.
+                            Currently seeking for a software developer role in a progressive and innovative company where I can utilize and develop my software development experience.  In my previous roles I have always been able to use my experience for the benefit of the company and expand the set of skills that I would bring to your business.
                         </p>
                     </div>
                 </div>
@@ -58,7 +53,13 @@
                             <li>
                                 <div class="info-item">
                                     <i class="fa fa-envelope"></i>
-                                    <span>rovian@codingnotes.co.nz</span>
+                                    <span><a href="mailto:rovian@codingnotes.co.nz">rovian@codingnotes.co.nz</a></span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="info-item">
+                                    <i class="fa fa-envelope"></i>
+                                    <span><a href="https://nz.linkedin.com/in/rovianvz" target="_blank">nz.linkedin.com/in/rovianvz</a></span>
                                 </div>
                             </li>
                         </ul>
@@ -73,17 +74,23 @@
                             <li>
                                 <div class="info-item">
                                     <i class="fa fa-phone"></i>
-                                    <span>+64 021 161 3613</span>
+                                    <span>021 161 3613</span>
                                 </div>
                             </li>
                         </ul>
                         <div class="social-icons small">
                             <ul>
                                 <li>
-                                    <a class="fa fa-facebook" href="#"></a>
+                                    <a class="fa fa-facebook" href="https://www.facebook.com/rovian.veronez" target="_blank"></a>
                                 </li>
                                 <li>
-                                    <a class="fa fa-github" href="#"></a>
+                                    <a class="fa fa-github" href="https://github.com/rovianvz" target="_blank"></a>
+                                </li>
+                                <li>
+                                    <a class="fa fa-youtube" href="https://www.youtube.com/user/rovianvz" target="_blank"></a>
+                                </li>
+                                <li>
+                                    <a class="fa fa-google-plus" href="https://plus.google.com/106496135765234322284/" target="_blank"></a>
                                 </li>
                             </ul>
                         </div>
@@ -136,7 +143,7 @@
                                 </div>
                                 <div class="profile-content timeline-content left">
                                     <label>email address</label>
-                                    <div class="value">
+                                    <div class="text-small">
                                         rovian@codingnotes.co.nz
                                     </div>
                                 </div>
@@ -167,7 +174,7 @@
 
                                 <div class="profile-content timeline-content left">
                                     <label>Phone</label>
-                                    <div class="value">+64 021 3613</div>
+                                    <div class="value">021 161 3613</div>
                                 </div>
 
                             </div>
@@ -193,42 +200,37 @@
                     <div class="interests-holder">
                         <div class="interests-row medium">
                             <ul>
+
                                 <li class="wow bounceInDown" data-wow-delay="0.1s">
-                                    <i class="fa fa-code"></i>
-                                    <span>Coding</span>
-                                </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.2s">
                                     <i class="fa fa-cutlery"></i>
                                     <span>Foods</span>
                                 </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.3s">
-                                    <i class="fa fa-graduation-cap"></i>
-                                    <span>Science</span>
+                                <li class="wow bounceInDown" data-wow-delay="0.2s">
+                                    <i class="fa fa-book"></i>
+                                    <span>Reading</span>
                                 </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.4s">
-                                    <i class="fa fa-leaf"></i>
-                                    <span>Nature</span>
+                                <li class="wow bounceInDown" data-wow-delay="0.3s">
+                                    <i class="fa fa-laptop"></i>
+                                    <span>Technology</span>
                                 </li>
                             </ul>
                         </div>
                         <div class="interests-row big">
                             <ul>
-                                <li class="wow bounceInDown" data-wow-delay="0.5s">
-                                    <i class="fa fa-music"></i>
-                                    <span>Music</span>
+                                <li class="wow bounceInDown" data-wow-delay="0.4s">
+                                    <i class="fa fa-code"></i>
+                                    <span>Coding</span>
                                 </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.6s">
+                                <li class="wow bounceInDown" data-wow-delay="0.5s">
                                     <i class="fa fa-plane"></i>
                                     <span>Travel</span>
                                 </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.7s">
-                                    <i class="fa fa-book"></i>
-                                    <span>Reading</span>
+                                <li class="wow bounceInDown" data-wow-delay="0.6s">
+                                    <i class="fa fa-institution"></i>
+                                    <span>History</span>
                                 </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.8s">
-                                    <i class="fa fa-coffee"></i>
-                                    <span>Coffee</span>
-                                </li>
+
+
                             </ul>
                         </div>
 
@@ -239,41 +241,34 @@
                         <div class="interests-row big">
                             <ul>
                                 <li class="wow bounceInDown" data-wow-delay="0.1s">
-                                    <i class="fa fa-rocket"></i>
-                                    <span>Space</span>
+                                    <i class="fa fa-coffee"></i>
+                                    <span>Coffee</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.2s">
                                     <i class="fa fa-road"></i>
                                     <span>road Trip</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.3s">
-                                    <i class="fa fa-paw"></i>
-                                    <span>dogs</span>
-                                </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.4s">
-                                    <i class="fa fa-paint-brush"></i>
-                                    <span>art</span>
+                                    <i class="fa fa-futbol-o"></i>
+                                    <span>football</span>
                                 </li>
                             </ul>
                         </div>
 
                         <div class="interests-row medium">
                             <ul>
+                                <li class="wow bounceInDown" data-wow-delay="0.4s">
+                                    <i class="fa fa-graduation-cap"></i>
+                                    <span>Science</span>
+                                </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.5s">
-                                    <i class="fa fa-music"></i>
-                                    <span>Music</span>
+                                    <i class="fa fa-paw"></i>
+                                    <span>dogs</span>
                                 </li>
+
                                 <li class="wow bounceInDown" data-wow-delay="0.6s">
-                                    <i class="fa fa-plane"></i>
-                                    <span>Travel</span>
-                                </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.7s">
-                                    <i class="fa fa-pencil"></i>
-                                    <span>Writing</span>
-                                </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.8s">
-                                    <i class="fa fa-coffee"></i>
-                                    <span>Coffee</span>
+                                    <i class="fa fa-desktop"></i>
+                                    <span>TV Series</span>
                                 </li>
                             </ul>
                         </div>
@@ -306,50 +301,46 @@
                         </div>
                         <div class="timeline-body">
                             <div class="event-item timeline-item">
-
-                                <div class="event-title left">
-                                    <h1>software developer</h1>
-                                    <h4>Mobiltec <small>Jan 2012 - Dec 2013</small></h4>
-                                </div>
-
-
-                                <div class="event-content timeline-content right">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>.
-                                        Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
-
-                                    </p>
-                                </div>
-
-                            </div>
-
-
-                            <div class="event-item timeline-item">
-
-
-
-
                                 <div class="event-content timeline-content left">
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                         Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
                                         Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
-
-                                    </p>
-
+                                   </p>
                                 </div>
-
                                 <div class="event-title right">
-                                    <h1>software developer scholarship holder</h1>
-                                    <h4>SEAD/UFRGS <small>Jul 2010 - Jun 2011</small></h4>
+                                    <h1>software developer intern</h1>
+                                    <h4>Central Station Software <small>Aug 2015 - Present</small></h4>
                                 </div>
-
                             </div>
-
-
-
-
+                            <div class="event-item timeline-item">
+                                <div class="event-item timeline-item">
+                                    <div class="event-title left">
+                                        <h1>software developer</h1>
+                                        <h4>Mobiltec <small>Jan 2012 - Dec 2013</small></h4>
+                                    </div>
+                                    <div class="event-content timeline-content right">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>.
+                                            Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
+                                            Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="event-item timeline-item">
+                                    <div class="event-content timeline-content left">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
+                                            Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
+                                        </p>
+                                    </div>
+                                    <div class="event-title right">
+                                        <h1>software developer scholarship holder</h1>
+                                        <h4>SEAD/UFRGS <small>Jul 2010 - Jun 2011</small></h4>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -382,40 +373,27 @@
 
                                 <div class="event-title left">
                                     <h1>bachelor of computer science</h1>
-                                    <h4>federal university of rio grande do sul</h4>
                                 </div>
-
-
                                 <div class="event-content timeline-content right">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Vivamus <strong>laoreet</strong> dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
-
-                                    </p>
+                                    <div style="margin-top: 25px">
+                                        <h4>federal university of rio grande do sul</h4>
+                                        <h5>2013</h5>
+                                    </div>
                                 </div>
-
                             </div>
 
 
                             <div class="event-item timeline-item">
                                 <div class="event-content timeline-content left">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
-
-                                    </p>
-
+                                    <div style="margin-top: 25px">
+                                        <h4>instituto sinodal da paz</h4>
+                                        <h5>2005</h5>
+                                    </div>
                                 </div>
                                 <div class="event-title right">
                                     <h1>High School</h1>
-                                    <h4>instituto sinodal da paz</h4>
+                                    
                                 </div>
-
-
-
-
                             </div>
                         </div>
                     </div>
