--- a/src/MVCBlog.Website/Views/Shared/Site.Layout.cshtml
+++ b/src/MVCBlog.Website/Views/Shared/Site.Layout.cshtml
@@ -11,6 +11,7 @@
     <meta name="keywords" content="coding, rovian, rovian voelz veronez, rovianvz">
     <meta name="robots" content="all">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700,800,400,600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/css/combined")
     @RenderSection("HeaderContent", false)
