--- a/src/MVCBlog.Website/Views/Blog/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model MVCBlog.Website.Models.OutputModels.Blog.IndexModel
 
 @section HeaderTitle {
-    <div class="head-image bg-image" data-bg-image="images/head-image.jpg">
+    <div class="head-image bg-image" data-bg-image="@Url.Content("~/images/head-image.jpg")">
         <div class="avatar wow bounceInDown">
-            <img alt="avatar" src="images/logo.png" />
+            <img alt="avatar" src="~/images/rovian.png" />
         </div>
     </div>
 
@@ -116,35 +116,7 @@
                         </div>
                     </div>
                 </section>
-                <hr />
-                <section>
-                    <div class="sticky-paper-head has-shadow ">
-                        <div class="content">
-                            <h1>Rovian</h1>
-                        </div>
-                    </div>
-
-                    <div class="sticky-paper-body has-shadow no-min-height">
-                        <div class="content">
-                            
-                        </div>
-                    </div>
-                </section>
-                <hr />
-                <section>
-                    <div class="sticky-paper-head has-shadow ">
-                        <div class="content">
-                            <h1>Murilo</h1>
-                        </div>
-                    </div>
-
-                    <div class="sticky-paper-body has-shadow no-min-height">
-                        <div class="content">
-
-                        </div>
-                    </div>
-                </section>             
-                           
+           
             </div>
         </div>
     </section>
