--- a/src/MVCBlog.Website/Views/Murilo/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Murilo/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @section HeaderTitle {
 
-    <div class="head-image bg-image" data-bg-image="images/head-image.jpg">
+    <div class="head-image bg-image" data-bg-image="@Url.Content("~/images/head-image.jpg")">
         <div class="avatar wow bounceInDown">
             <img alt="avatar" src="images/rovian.png" />
         </div>
